Fix scrolled to glossary term being hidden by alphabet header
I tried to change/fix the alphabet thingy for a couple of reasons but it's much harder to get right than I thought!

--- a/src/scss/common/glossary.scss
+++ b/src/scss/common/glossary.scss
@@ -109,6 +109,7 @@
 
   .glossary_term_name {
     position: relative;
+    margin-left: 15px;
 
     img {
       position: absolute;
